--- a/lib/help/Makefile
+++ b/lib/help/Makefile
@@ -2,6 +2,6 @@ MKPATH=../../mk/
 include $(MKPATH)buildsys.mk
 
 DATA = attack.txt birth.txt command.txt debug.txt dungeon.txt \
-  general.txt help.hlp option.txt playing.txt version.txt
+  general.txt index.txt help.hlp option.txt playing.txt version.txt
 PACKAGE = help
 
