--- a/lib/help/Makefile
+++ b/lib/help/Makefile
@@ -1,7 +1,7 @@
 MKPATH=../../mk/
 include $(MKPATH)buildsys.mk
 
-DATA = attack.txt birth.txt command.txt debug.txt dungeon.txt \
-  general.txt index.txt help.hlp option.txt playing.txt version.txt
+DATA = attack.txt birth.txt command.txt copying.txt customize.txt debug.txt \
+  dungeon.txt general.txt index.txt help.hlp option.txt playing.txt version.txt
 PACKAGE = help
 
