Add a sound for objects being dropped from or carried to the quiver

--- a/lib/xtra/sound/sound.cfg
+++ b/lib/xtra/sound/sound.cfg
@@ -105,7 +105,7 @@ hit_hi_superb = plc_hit_anvil2.mp3
 miss = plc_miss_arrow2.mp3
 
 # You fire a missile.
-shoot = plc_miss_swish.mp3 plc_miss_arrow.mp3
+shoot = plc_miss_arrow.mp3
 
 # You hit something with a missile.
 shoot_hit = plc_hit_arrow.mp3
@@ -288,6 +288,9 @@ destroy = plm_bang_metal.mp3 plm_break_canister.mp3 plm_break_glass.mp3 plm_brea
 
 # You wield or take off something.
 wield = plm_metal_sharpen.mp3
+
+# You take something in or out of your quiver.
+quiver = plc_miss_swish.mp3
 
 # You wield a cursed item.
 cursed = pls_man_oooh.mp3
