Add modifying.txt help file

--- a/lib/help/Makefile
+++ b/lib/help/Makefile
@@ -2,6 +2,7 @@ MKPATH=../../mk/
 include $(MKPATH)buildsys.mk
 
 DATA = attack.txt birth.txt command.txt copying.txt customize.txt debug.txt \
-  dungeon.txt general.txt index.txt help.hlp option.txt playing.txt version.txt
+  dungeon.txt general.txt index.txt help.hlp modifying.txt option.txt \
+  playing.txt version.txt
 PACKAGE = help
 
