--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -6,8 +6,8 @@
 #
 
 NAME = Angband
-VERSION = 4.0beta
-COPYRIGHT = (c) 1995-2014 Angband contributors
+VERSION = 4.0.0
+COPYRIGHT = (c) 1995-2015 Angband contributors
 PROGNAME = angband
 
 HEADERS = \
