--- a/src/Makefile.win
+++ b/src/Makefile.win
@@ -16,12 +16,21 @@
 EXE = angband.exe
 all: ../$(EXE)
 
+ifneq (,$(findstring \SYSTEM32,$(PATH)))
+  dos = TRUE
+endif
 ifneq (,$(findstring \system32,$(PATH)))
+  dos = TRUE
+endif
+
+ifdef dos
   CP = copy
   RM = del
+  BAR = "\"
 else
   CP = -cp
   RM = -rm
+  BAR = "/"
 endif
 
 
@@ -102,8 +111,8 @@ endif
 
 ../$(EXE): $(EXE)
 	$(CP) $(EXE) ..
-	$(CP) win/dll/libpng12.dll ..
-	$(CP) win/dll/zlib1.dll ..
+	$(CP) win$(BAR)dll$(BAR)libpng12.dll ..
+	$(CP) win$(BAR)dll$(BAR)zlib1.dll ..
 
 $(EXE): $(OBJS)
 	$(CC) $(CFLAGS) -o $(EXE) $(OBJS) $(LIBS)
