--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(Angband, 3.5.0, bugs@rephial.org)
+AC_INIT(Angband, 3.5.1, bugs@rephial.org)
 AC_CONFIG_SRCDIR(src)
 
 AC_CANONICAL_HOST
@@ -71,6 +71,14 @@ AC_PROG_LN_S
 AC_PROG_INSTALL
 AC_PROG_MKDIR_P
 AC_CHECK_TOOL(RC, windres, no)
+AC_ARG_VAR([RST2HTML], [command for converting reStructuredText to HTML])
+AC_CHECK_PROGS([RST2HTML], [rst2html.py rst2html], [NOTFOUND])
+AC_SUBST(RST2HTML)
+AC_ARG_VAR([RST2LATEX], [command for converting reStructuredText to LaTeX])
+AC_CHECK_PROGS([RST2LATEX], [rst2latex.py rst2latex], [NOTFOUND])
+AC_SUBST(RST2LATEX)
+AC_CHECK_PROGS([PDFLATEX], [pdflatex], [NOTFOUND])
+AC_SUBST(PDFLATEX)
 
 AC_PATH_PROG(RM, rm)
 AC_PATH_PROG(MV, mv)
@@ -390,11 +398,13 @@ fi
 
 echo
 echo "-- Frontends --"
+have_frontend=no
 if test "$enable_curses" = "yes"; then
 	if test "$with_curses" = "no"; then
 		echo "- Curses                                  No; missing libraries"
 	else
 		echo "- Curses                                  Yes"
+		have_frontend=yes
 	fi
 else
 	echo "- Curses                                  Disabled"
@@ -404,6 +414,7 @@ if test "$enable_x11" = "yes"; then
 		echo "- X11                                     No; missing libraries"
 	else
 		echo "- X11                                     Yes"
+		have_frontend=yes
 	fi
 else
 	echo "- X11                                     Disabled"
@@ -413,6 +424,7 @@ if test "$enable_sdl" = "yes"; then
 		echo "- SDL                                     No; missing libraries"
 	else
 		echo "- SDL                                     Yes"
+		have_frontend=yes
 	fi
 else
 	echo "- SDL                                     Disabled"
@@ -423,6 +435,7 @@ if test "$enable_win" = "yes"; then
 		echo "- Windows                                 No; missing libraries"
 	else
 		echo "- Windows                                 Yes"
+		have_frontend=yes
 	fi
 else
 	echo "- Windows                                 Disabled"
@@ -430,14 +443,16 @@ fi
 
 if test "$enable_test" = "yes"; then
 	echo "- Test                                    Yes"
+	have_frontend=yes
 else
-    echo "- Test                                    No"
+	echo "- Test                                    No"
 fi
 
 if test "$enable_stats" = "yes"; then
 	echo "- Stats                                   Yes"
+	have_frontend=yes
 else
-    echo "- Stats                                   No"
+	echo "- Stats                                   No"
 fi
 
 echo
@@ -451,3 +466,9 @@ if test "$enable_sdl_mixer" = "yes"; then
 else
 	echo "- SDL sound                               Disabled"
 fi
+
+if test "$have_frontend" = "no"; then
+	AC_MSG_ERROR([No frontend defined (missing libraries?)])
+	rm mk/buildsys.mk
+fi
+
