Intergrate sound being a module into the build system

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -67,6 +67,8 @@ SDLMAINFILES = main-sdl.o
 
 SNDSDLFILES = snd-sdl.o
 
+SOUNDFILES = sound-core.o
+
 TESTMAINFILES = main-test.o
 
 WINMAINFILES = \
@@ -158,7 +160,6 @@ ANGFILES = \
 	score.o \
 	save.o \
 	savefile.o \
-	sound-core.o \
 	store.o \
 	target.o \
 	trap.o \
