--- a/src/Makefile.win
+++ b/src/Makefile.win
@@ -40,7 +40,7 @@ endif
 
 # Include list of object files and add system-specific ones
 include Makefile.inc
-MAINFILES="$(WINMAINFILES) $(SOUNDFILES)"
+MAINFILES="$(WINMAINFILES)"
 
 ifdef CONSOLE
   CFLAGS = -DUSE_GCU -DWIN32_CONSOLE_MODE -I$(PDCURSES_INC)
@@ -55,7 +55,7 @@ else
   CFLAGS += -Iwin/include -Lwin/lib
   LDFLAGS += -Lwin/lib
 
-  IOBJS = $(BASEOBJS) win/$(PROGNAME).res main-win.o win/readdib.o win/readpng.o win/scrnshot.o win/win-layout.o
+  IOBJS = $(BASEOBJS) win/$(PROGNAME).res $(SOUNDFILES) main-win.o win/readdib.o win/readpng.o win/scrnshot.o win/win-layout.o
   LIBS = -mwindows -lwinmm -lzlib -llibpng -lmsimg32
 endif
 
