Add way to specify sanitizer flags via env variable

--- a/mk/buildsys.mk.in
+++ b/mk/buildsys.mk.in
@@ -36,14 +36,15 @@ LD = ${CC}
 RANLIB = @RANLIB@
 PYTHON = @PYTHON@
 ASFLAGS = @ASFLAGS@
-CFLAGS = @CFLAGS@
+SANITIZE_FLAGS =
+CFLAGS = @CFLAGS@ ${SANITIZE_FLAGS}
 CXXFLAGS = @CXXFLAGS@
 CPPFLAGS = @CPPFLAGS@
 DFLAGS = @DFLAGS@
 ERLCFLAGS = @ERLCFLAGS@
 OBJCFLAGS = @OBJCFLAGS@
 OBJCXXFLAGS = @OBJCXXFLAGS@
-LDFLAGS = @LDFLAGS@
+LDFLAGS = @LDFLAGS@ ${SANITIZE_FLAGS}
 LDFLAGS_RPATH = @LDFLAGS_RPATH@
 LIBS = @LIBS@
 PYTHON_FLAGS = @PYTHON_FLAGS@
