--- a/lib/gamedata/Makefile
+++ b/lib/gamedata/Makefile
@@ -3,7 +3,7 @@ include $(MKPATH)buildsys.mk
 
 CONFIG = activation.txt artifact.txt body.txt blow_methods.txt \
  blow_effects.txt brand.txt class.txt constants.txt curse.txt \
- dungeon_profile.txt ego_item.txt flavor.txt hints.txt history.txt \
+ dungeon_profile.txt ego_item.txt element.txt flavor.txt hints.txt history.txt \
  monster.txt monster_base.txt monster_spell.txt names.txt object.txt \
  object_base.txt p_race.txt pain.txt pit.txt player_timed.txt quest.txt \
  realm.txt room_template.txt slay.txt store.txt terrain.txt trap.txt vault.txt
