Add PRIVATE_USER_PATH to the command-line defines for the non-autoconf build

--- a/src/Makefile.std
+++ b/src/Makefile.std
@@ -67,7 +67,7 @@ LIBS = -lm
 
 # Extract CFLAGS and LIBS from the system definitions
 MODULES = $(SYS_x11) $(SYS_gcu) $(SYS_sdl) $(SOUND_sdl) $(SYS_stats)
-CFLAGS += $(patsubst -l%,,$(MODULES)) $(INCLUDES)
+CFLAGS += $(patsubst -l%,,$(MODULES)) $(INCLUDES) -DPRIVATE_USER_PATH="~/.angband"
 LIBS += $(patsubst -D%,,$(patsubst -I%,, $(MODULES)))
 
 
