Remove vestigial pseudo-id stuff, add sound for learning a rune

--- a/lib/sounds/sound.cfg
+++ b/lib/sounds/sound.cfg
@@ -298,8 +298,8 @@ cursed = pls_man_oooh.mp3
 # You notice something (generic notice)
 notice = id_bad_hmm.mp3
 
-# You notice something about your equipment or inventory.
-pseudo_id = id_good_hmm.mp3
+# You learn a rune.
+rune = id_good_hmm.mp3
 
 # You successfully cast a spell.
 cast_spell = plm_spell1.mp3 plm_spell2.mp3 plm_spell3.mp3
